index html video ekleme ve kod düzenleme v2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <!-- Artık responsive: genişlik cihaz genişliği kadar -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Anıl Yemelek | Director of Photography</title>
+<!--  <link rel="shortcut icon" 		  href="https://img-teknosa-sap.mncdn.com/_ui/responsive/theme-teknosa/images/icon/favicon-48x48.png" />-->
+<!--  <link rel="icon" type="image/png" href="https://img-teknosa-sap.mncdn.com/_ui/responsive/theme-teknosa/images/icon/favicon-48x48.png" sizes="48x48" />-->
+<!--  <link rel="icon" type="image/png" href="https://img-teknosa-sap.mncdn.com/_ui/responsive/theme-teknosa/images/icon/favicon-48x48.png" sizes="48x48" />-->
   <meta name="description" content="Anıl Yemelek – Film/TV/Commercial portfolio." />
   <style>
     :root {
@@ -526,6 +529,17 @@
       media: [{
         type: "video",
         src: "https://player.vimeo.com/video/1089788027"
+      }]
+    },
+    {
+      slug: "Hokus 4 yaşında",
+      title: "Hokus 4 yaşında",
+      subtitle: "Commercial",
+      cover: "https://vumbnail.com/1033598760.jpg",
+      description: "Hokus 4 yaşında",
+      media: [{
+        type: "video",
+        src: "https://vimeo.com/1152170812"
       }]
     }
   //   ,{
