index html video ekleme ve kod düzenleme v2

--- a/index.html
+++ b/index.html
@@ -532,10 +532,10 @@
       }]
     },
     {
-      slug: "Hokus 4 yaşında",
+      slug: "hokus",
       title: "Hokus 4 yaşında",
       subtitle: "Commercial",
-      cover: "https://vumbnail.com/1033598760.jpg",
+      cover: "https://vumbnail.com/1152170812.jpg",
       description: "Hokus 4 yaşında",
       media: [{
         type: "video",
