index html video ekleme ve kod düzenleme v5

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   <div class="wrap topbar">
     <div class="brand">
-      <a href="#/" class="name">ANIL YEMELEK</a>
+      <a href="/" class="name">ANIL YEMELEK</a>
       <span class="tag">Director of Photography</span>
     </div>
     <nav>
